[package]
name = "home-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.9"
log = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
webhook = "2.0"
